tests/diagnostics/user_string_type.kal
# String is a built-in type and cannot be redefined.
struct String { x: i64 }
